--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -40,6 +40,15 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AForge, Version=2.2.5.0, Culture=neutral, PublicKeyToken=c1db6ff4eaa06aeb, processorArchitecture=MSIL">
+      <HintPath>packages\AForge.2.2.5\lib\AForge.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Video, Version=2.2.5.0, Culture=neutral, PublicKeyToken=cbfb6e07d173c401, processorArchitecture=MSIL">
+      <HintPath>packages\AForge.Video.2.2.5\lib\AForge.Video.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Video.DirectShow, Version=2.2.5.0, Culture=neutral, PublicKeyToken=61ea4348d43881b7, processorArchitecture=MSIL">
+      <HintPath>packages\AForge.Video.DirectShow.2.2.5\lib\AForge.Video.DirectShow.dll</HintPath>
+    </Reference>
     <Reference Include="Azure.Core, Version=1.46.1.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
       <HintPath>packages\Azure.Core.1.46.1\lib\net472\Azure.Core.dll</HintPath>
     </Reference>
@@ -322,6 +331,18 @@
     <Compile Include="formbuttman.Designer.cs">
       <DependentUpon>formbuttman.cs</DependentUpon>
     </Compile>
+    <Compile Include="formeditperubahanperbaikan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formeditperubahanperbaikan.Designer.cs">
+      <DependentUpon>formeditperubahanperbaikan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formkamera.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formkamera.Designer.cs">
+      <DependentUpon>formkamera.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormLoading.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -539,6 +560,7 @@
     <EmbeddedResource Include="actual_31.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="buktiperubahan.rdlc" />
     <EmbeddedResource Include="cardmaterial.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -568,6 +590,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formbuttman.resx">
       <DependentUpon>formbuttman.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formeditperubahanperbaikan.resx">
+      <DependentUpon>formeditperubahanperbaikan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formkamera.resx">
+      <DependentUpon>formkamera.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLoading.resx">
       <DependentUpon>FormLoading.cs</DependentUpon>
@@ -798,6 +826,9 @@
     <None Include="Resources\checklists.png" />
     <None Include="Resources\books.png" />
     <None Include="Resources\calculator.png" />
+    <None Include="Resources\photo-camera-interface-symbol-for-button.png" />
+    <None Include="Resources\check.png" />
+    <None Include="Resources\close.png" />
     <Content Include="Stock Barang Template.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
