--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net48" />
   <package id="Azure.Core" version="1.46.1" targetFramework="net48" />
   <package id="Azure.Identity" version="1.14.0" targetFramework="net48" />
   <package id="FontAwesome.Sharp" version="6.6.0" targetFramework="net48" />
