--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -338,6 +338,12 @@
     <Compile Include="formbuttman.Designer.cs">
       <DependentUpon>formbuttman.cs</DependentUpon>
     </Compile>
+    <Compile Include="formdialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formdialog.Designer.cs">
+      <DependentUpon>formdialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="formeditperubahanperbaikan.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -622,6 +628,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formbuttman.resx">
       <DependentUpon>formbuttman.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formdialog.resx">
+      <DependentUpon>formdialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formeditperubahanperbaikan.resx">
       <DependentUpon>formeditperubahanperbaikan.cs</DependentUpon>
