--- a/App.config
+++ b/App.config
@@ -3,10 +3,16 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="GOS_FxApps.Properties.Settings.gos_appsConnectionString" connectionString="Data Source=192.168.1.25;Initial Catalog=gos_apps;Persist Security Info=True;User ID=sa;Password=%tii2025%;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
-        <add name="GOS_FxApps.Properties.Settings.gos_appsConnectionString1" connectionString="Data Source=&quot;mssql-200073-0.cloudclusters.net, 16370&quot;;Initial Catalog=gos_apps;Persist Security Info=True;User ID=DTIAdmin;Password=%Tii2025%;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
-        <add name="GOS_FxApps.Properties.Settings.gos_apps" connectionString="Data Source=mssql-200510-0.cloudclusters.net,19998;Initial Catalog=gos_apps;Persist Security Info=True;User ID=DTIAdmin;Password=%Tii2025%;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
-        <add name="GOS_FxApps.Properties.Settings.gos_appsserver" connectionString="Data Source=192.168.1.64;Initial Catalog=gos_apps;User ID=sa;Password=$Genta2025$;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+        <add name="GOS_FxApps.Properties.Settings.gos_appsConnectionString"
+            connectionString="Data Source=192.168.1.25;Initial Catalog=gos_apps;Persist Security Info=True;User ID=sa;Password=%tii2025%;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="GOS_FxApps.Properties.Settings.gos_appsConnectionString1"
+            connectionString="Data Source=&quot;mssql-200073-0.cloudclusters.net, 16370&quot;;Initial Catalog=gos_apps;Persist Security Info=True;User ID=DTIAdmin;Password=%Tii2025%;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="GOS_FxApps.Properties.Settings.gos_apps" connectionString="Data Source=mssql-200510-0.cloudclusters.net,19998;Initial Catalog=gos_apps;Persist Security Info=True;User ID=DTIAdmin;Password=%Tii2025%;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="GOS_FxApps.Properties.Settings.gos_appsserver" connectionString="Data Source = TII_NB2_1122; Initial Catalog = gos_apps; User ID = tii; Password=mm;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
