--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -491,6 +491,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="registrasi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -535,6 +540,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="koefisiensi.resx">
       <DependentUpon>koefisiensi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="materialmasuk.resx">
+      <DependentUpon>materialmasuk.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Rb_Stokhari.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -716,9 +724,6 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="materialmasuk.resx">
-      <DependentUpon>materialmasuk.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="pemakaianMaterial.resx">
       <DependentUpon>pemakaianMaterial.cs</DependentUpon>
     </EmbeddedResource>
@@ -748,14 +753,9 @@
     </Content>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="registrasi.resx">
       <DependentUpon>registrasi.cs</DependentUpon>
     </EmbeddedResource>
@@ -875,6 +875,8 @@
     <None Include="Resources\close.png" />
     <None Include="Resources\checklist.png" />
     <None Include="Resources\wall-clock.png" />
+    <None Include="Resources\Logo-Genta.png" />
+    <None Include="Resources\logo1.png" />
     <Content Include="Stock Barang Template.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
