--- a/App.config
+++ b/App.config
@@ -11,7 +11,7 @@
             providerName="System.Data.SqlClient" />
         <add name="GOS_FxApps.Properties.Settings.gos_apps" connectionString="Data Source=mssql-200510-0.cloudclusters.net,19998;Initial Catalog=gos_apps;Persist Security Info=True;User ID=DTIAdmin;Password=%Tii2025%;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
-        <add name="GOS_FxApps.Properties.Settings.gos_appsserver" connectionString="Data Source = 192.168.1.64; Initial Catalog = gos_apps; User ID = sa; Password=$Genta2025$;TrustServerCertificate=True"
+        <add name="GOS_FxApps.Properties.Settings.gos_appsserver" connectionString="Data Source = WIN-LP6P3PLEU8O;Initial Catalog = gos_apps;Integrated Security=True;TrustServerCertificate=True;"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
