--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -899,7 +899,19 @@
     <None Include="Resources\left-arrow.png" />
     <None Include="Resources\right-arrow.png" />
     <None Include="Resources\loading.png" />
+    <None Include="Resources\logobaru-RRIS.png" />
+    <None Include="Resources\logobaru-RRIS-1.png" />
+    <None Include="Resources\logo-RRIS.png" />
     <Content Include="Stock Barang Template.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Template_Penerimaan.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Template_Perbaikan.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Template_Pengiriman.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
